# 42_scop

./: .gitignore  CMakeLists.txt  Makefile  README.md  order.md  run.bat  run.ps1  run.sh
include/: Application.hpp  Math.hpp  Mesh.hpp  ObjParser.hpp  Shader.hpp  Window.hpp
include/KHR/: khrplatform.h
include/glad/: glad.h
shaders/: mesh.frag  mesh.vert
src/: Application.cpp  Math.cpp  Mesh.cpp  ObjParser.cpp  Shader.cpp  Window.cpp  glad.c  main.cpp
